--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,12 @@
 *.pyc
 *.o
 
+build/
+
 #parser generated files
-peg_peg.py
-parser/lcd_idl.cpp
+parser/peg_peg.py
+parser/parser.cpp
+parser/parser.h
 include/lcd_idl.h
 
 #editor configs
