Run vembyr directly in CMake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,8 @@ project(lcds)
 
 add_custom_command(
     OUTPUT ${PROJECT_SOURCE_DIR}/parser/parser.cpp ${PROJECT_SOURCE_DIR}/parser/parser.h
-    COMMAND ${PROJECT_SOURCE_DIR}/parser/generate
+    COMMAND ${PROJECT_SOURCE_DIR}/parser/vembyr-1.1/peg.py --save=${PROJECT_SOURCE_DIR}/parser/parser.h --h ${PROJECT_SOURCE_DIR}/parser/idl.peg
+    COMMAND ${PROJECT_SOURCE_DIR}/parser/vembyr-1.1/peg.py --save=${PROJECT_SOURCE_DIR}/parser/parser.cpp --cpp ${PROJECT_SOURCE_DIR}/parser/idl.peg
     MAIN_DEPENDENCY parser/idl.peg)
 
 add_executable(idlc parser/parser.cpp main/main.cpp)
