Add fix for GCC supporting only <experimental/filesystem>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,3 +13,10 @@ add_custom_command(
 add_executable(idlc parser/parser.cpp main/main.cpp)
 set_property(TARGET idlc PROPERTY CXX_STANDARD 17)
 target_include_directories(idlc PRIVATE gsl/include)
+
+if (${CMAKE_CXX_COMPILER_ID} STREQUAL "GNU")
+    if (${CMAKE_CXX_COMPILER_VERSION} VERSION_LESS "8")
+        message(STATUS "Applying filesystem header fix")
+        target_link_libraries(idlc "-lstdc++fs")
+    endif()
+endif()
