Add file inclusion and module collection

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,7 @@ add_custom_command(
     COMMAND ${Python2_EXECUTABLE} ${PROJECT_SOURCE_DIR}/parser/vembyr-1.1/peg.py --save=${PROJECT_SOURCE_DIR}/parser/parser.cpp --cpp ${PROJECT_SOURCE_DIR}/parser/idl.peg
     MAIN_DEPENDENCY parser/idl.peg)
 
-add_executable(idlc parser/parser.cpp main/main.cpp "main/type_map.h" "main/type_map.cpp" "main/string_heap.h" "main/string_heap.cpp")
+add_executable(idlc parser/parser.cpp main/main.cpp "main/node_map.h"  "main/string_heap.h" "main/string_heap.cpp")
 set_property(TARGET idlc PROPERTY CXX_STANDARD 17)
 target_include_directories(idlc PRIVATE gsl/include)
 
