--- a/.gitignore
+++ b/.gitignore
@@ -3,13 +3,12 @@
 *.pyc
 *.o
 
-examples/driver-codegen
+examples/dump
 build/
 out/
 CMakeSettings.json
 dump.txt
 notes.txt
-utest-mod/
 
 #parser generated files
 parser/peg_peg.py
