--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,7 +24,7 @@ add_executable(
 set_property(TARGET idlc PROPERTY CXX_STANDARD 17)
 target_include_directories(idlc PRIVATE gsl/include)
 
-if (${CMAKE_CXX_COMPILER_ID} STREQUAL "GNU")
+if (CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
 	if (${CMAKE_CXX_COMPILER_VERSION} VERSION_LESS "8")
 		message(STATUS "Applying filesystem header fix")
 		target_link_libraries(idlc "-lstdc++fs")
