Checkpoint-add AST walker
This commit starts the new AST walker ahead of AST construction,
since it'll be much easier to catch what parts of the parser are
unfinished if we can actually inspect the tree in a meaningful way.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,9 @@
 cmake_minimum_required(VERSION 3.10.0)
 
-set(CMAKE_TOOLCHAIN_FILE ${CMAKE_CURRENT_SOURCE_DIR}/vcpkg/scripts/buildsystems/vcpkg.cmake
-	CACHE STRING "Vcpkg toolchain file")
+set(
+	CMAKE_TOOLCHAIN_FILE ${CMAKE_CURRENT_SOURCE_DIR}/vcpkg/scripts/buildsystems/vcpkg.cmake
+	CACHE STRING "Vcpkg toolchain file"
+)
 
 project(lcds)
 
@@ -13,13 +15,14 @@ add_custom_command(
 	OUTPUT ${PROJECT_SOURCE_DIR}/parser/parser.cpp ${PROJECT_SOURCE_DIR}/parser/parser.h
 	COMMAND ${Python2_EXECUTABLE} ${PROJECT_SOURCE_DIR}/parser/vembyr-1.1/peg.py --save=${PROJECT_SOURCE_DIR}/parser/parser.h --h ${PROJECT_SOURCE_DIR}/parser/idl.peg
 	COMMAND ${Python2_EXECUTABLE} ${PROJECT_SOURCE_DIR}/parser/vembyr-1.1/peg.py --save=${PROJECT_SOURCE_DIR}/parser/parser.cpp --cpp ${PROJECT_SOURCE_DIR}/parser/idl.peg
-	MAIN_DEPENDENCY parser/idl.peg)
+	MAIN_DEPENDENCY parser/idl.peg
+)
 
 add_executable(
 	idlc
 	"parser/parser.cpp"
 	"parser/string_heap.cpp"
-	"test/test.cpp"
+	"frontend/main.cpp"
 )
 
 set_property(TARGET idlc PROPERTY CXX_STANDARD 17)
