--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,7 +22,7 @@ add_executable(
 	"src/parser/parser.cpp"
 	"src/parser/string_heap.cpp"
 	"src/parser/parse_globals.cpp"
-	"src/marshal/build_pgraph.cpp"
+	"src/sema/nodedb.cpp"
 	"src/main.cpp"
 )
 
