Implement projection templating
- Projections have three potential annotation sets
- When the same projection is used with the same set, the nodes are shared
- Projection nodes now have expected semantics

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,10 +23,10 @@ add_executable(
 	"src/parser/string_heap.cpp"
 	"src/parser/parse_globals.cpp"
 	"src/ast/ast_dump.cpp"
-	"src/sema/type_walk.cpp"
+	"src/sema/pgraph_generation.cpp"
 	"src/sema/name_binding.cpp"
 	"src/sema/pgraph_dump.cpp"
-	"src/sema/defaults_walk.cpp"
+	"src/sema/lowering.cpp"
 	"src/main.cpp"
 )
 
