--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,9 +23,9 @@ add_executable(
 	"src/parser/string_heap.cpp"
 	"src/parser/parse_globals.cpp"
 	"src/ast/ast_dump.cpp"
+	"src/ast/pgraph_dump.cpp"
 	"src/sema/analysis.cpp"
 	"src/sema/name_binding.cpp"
-	"src/sema/pgraph_dump.cpp"
 	"src/main.cpp"
 )
 
